--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         </script>
     </head>
     <body>
-        <p>And now we wait ...</p>
+        <p class="base">And now we wait ...</p>
     </body>
 </html>
