--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </head>
     <body>
         <p class="base">And now we wait ...</p>
+        <div class="cursor"></div>
     </body>
     <script src="cursor.js"></script>
 </html>
