--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <meta lang="en"
+        <title>x e f e r i s</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/main.css">
@@ -17,5 +18,5 @@
         <p class="base">And now we wait ...</p>
         <div class="cursor"></div>
     </body>
-    <script src="cursor.js"></script>
+    <script src="js/cursor.js"></script>
 </html>
