removed standard cursor

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta lang="en"
+        <meta lang="en">
         <title>x e f e r i s</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
