Added start state

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </script>
     </head>
     <body>
-        <p class="base">And now we wait <span>   </span></p>
+        <p class="base">And now we wait <span>...</span></p>
         <div class="cursor"></div>
     </body>
     <script src="js/cursor.js"></script>
