--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <title>x e f e r i s</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" href="css/main.css">
         </script>
     </head>
