--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/cursor.css">
         </script>
     </head>
     <body>
